src/style.scss
/* ... */
.cml {
    cursor: pointer;
    display: flex;
    background: $colorBackground;
    width: calc(100% - 20px);
    padding: 6px;
    animation: fade-in .2s;
    &:hover {
        background: $colorBackgroundLight;
    }
    margin: .2em 0;
    margin-right: 3px;
    box-shadow: $colorBackground 0 0 $shadowWidth;
    justify-content: flex-start;
    align-self: flex-end;
    align-items: flex-start;
    * {
        text-align: left;
        position: initial;
    }
    .writer-dlc {
        display: inline;
        text-overflow: ellipsis;
        overflow: clip;
        white-space: nowrap;
        max-width: 100%;
    }
    .text {
        align-items: flex-start;
        width: 100%;
        text-align: left;
    }
    .vp>.page {
        align-items: center;
    }
    &.re {
        width: calc(100% - 50px);
        position: relative;
    }
    .re-icon {
        position: absolute;
        left: -25px;
        top: 7px;
        * {
            font-size: 20px;
            color: $colorForegroundDark;
        }
    }
    &.rp {
        background: $colorHighlight;
        &:hover {
            background: $colorHighlightDark;
        }
    }
}

.vp {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    overscroll-behavior: none;
    justify-content: flex-start;
    align-items: flex-start;

    >.page {
        min-width: calc(100% - 2px);
        max-width: calc(100% - 2px);
        padding: 2px 0 12px 0;
        align-items: baseline;
        
        .notify .tt {
            &:hover {
                background: transparent;
            }
            * {
                color: $colorForegroundDark;
            }
        }
        &.hu .id {
            display: none !important;
        }
    }
}

video.d, img.d {
    width: var(--ds);
    height: var(--ds);
}

img.nikcon {
    width: 1em;
    height: 1em;
    margin-right: .2em;
}

.ip {
    font-size: 10px !important;
    &::before {
        display: inline;
        content: ' (';
    }
    &::after {
        display: inline;
        content: ')';
    }
}
.name {
    font-weight: bold;
}
* {
    >.hover {
        display: none;
    }
    >.not-hover {
        display: flex;
    }
    &:hover {
        >.hover {
            display: flex;
        }
        >.not-hover {
            display: none;
        }
    }
}
.hd {
    font-weight: bold;
}
.b {
    display: flex;
    padding: 4px;
    margin: 10px;
    font-weight: bold;
    &:hover {
        background: $colorForeground20;
    }
    &.t {
        background: $colorForeground20;
        &:hover {
            background: $colorForeground40;
        }
    }
}

.gray {
    color: $colorForegroundDark;
    * {
        color: $colorForegroundDark;
    }
    >span {
        color: $colorForegroundDark;
        font-size: 20px;
    }
    &:hover {
        color: $colorForeground;
        >span {
            color: $colorForeground;
        }
    }
}

.gray-div {
    color: $colorForegroundDark;
    div {
        color: $colorForegroundDark;
    }
}

.go::after {
    content: '';
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    background: $colorBackgroundDark80;
}

::-webkit-scrollbar {
    width: 2px;
    height: 2px;
}
::-webkit-scrollbar-track {
    background: transparent;
}
::-webkit-scrollbar-thumb {
    border-radius: 1px;
    background: #888;
}
::-webkit-scrollbar-thumb:hover {
    background: #555;
} 

.hidden, .grecaptcha-badge, .hn img.nikcon, .chl.block {
    display: none !important;
    visibility: collapse !important;
}

$settings:
    'wght' 400,
    'opsz' 48;

$filledSettings:
    'FILL' 1,
    'GRAD' 200,
    $settings;

$border: $colorBackgroundLight 1px solid;

.material-symbols-outlined {
    font-variation-settings:
    'FILL' 0,
    'GRAD' 0,
    $settings;
    user-select: none;

    &.f {
        font-variation-settings:
            $filledSettings;
    }
}

.icon {
    padding: 0;
    &.sml {
        font-size: 1em;
    }
}

main {
    justify-content: flex-start;
    --cw: 340px;
    >* {
        position: relative;
        height: 100vh;
        height: 100svh;
    }
}

main.fm {
    --cw: 100vw;
    --fm-page-width: min(100vw - 32px, 840px);
    background:
        radial-gradient(circle at top, rgba(255, 196, 0, .08), transparent 30%),
        linear-gradient(180deg, rgba(255, 255, 255, .02), transparent 16%),
        $colorBackgroundDark;

    >.video {
        display: none !important;
        visibility: collapse !important;
    }

    >.chat {
        width: 100vw;
        width: 100svw;
        height: 100vh;
        height: 100svh;
    }
}

.video {
    background: $colorBackgroundDark;
    width: calc(100% - var(--cw));    

    >div {
        width: 100%;
        // position: relative;
    }
}

.main {
    height: 100%;
    >div {
        position: absolute;
        transition: all .2s;
    }
    >div.p {
        left: calc(50% - 180px);
        height: 130px;
        width: 360px;
        >.src {
            width: 200px;
            margin: 10px;
            overflow-y: hidden;
        }
        >.ph {
            visibility: hidden;
            margin-right: calc(-1em - 20px);
            margin-left: 20px;
            z-index: 1;
        }
        &.blank {
            >.src {
                text-indent: 14px;
            }
            >.ph {
                visibility: visible;
            }
        }
    }
}

.r1 {
    width: calc(100% / var(--rw1));
    top: 0;
    height: var(--r2t);
    
    &.c2 {
        left: calc(100% / var(--rw1));
    }
    &.c3 {
        left: calc(2 * 100% / var(--rw1));
    }
    &.c4 {
        left: calc(3 * 100% / var(--rw1));
    }
}
.r1 {
    height: var(--r2t);
}
/* ... */

